# pkgsentry-oss

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  docker-compose.standalone.yml  docker-compose.yml  focus.example.txt  pyproject.toml  requirements.txt
.github/workflows/: build-detonation.yml  intel-baseline.yml  lint.yml  test.yml
detonation/: Makefile  go.mod
detonation/deploy/: bootstrap.sh  detonation-svc.service  detonation.slice  setup.sh  tetragon-policy.yaml
docs/: README.md  ROADMAP.md  detection-rules.md  detonation.md  ecosystems-reference.md  intel-pack.md  opengrep-rules.md  operations.md  pipeline-flows.drawio  pipeline.md  regression-testing.md
docs/diagrams/: architecture-overview.drawio  code-diff-flow.drawio  crates-pipeline.drawio  detection-layers.drawio  ecosystem-lifecycle.drawio  go-pipeline.drawio  npm-pipeline.drawio  pypi-pipeline.drawio  queue-state-machine.drawio  scan-pipeline.drawio
pkgsentry/: __init__.py  __main__.py  adapter.py  cli.py  detonation_queue.py  detonation_worker.py  finding_reuse.py  focus.py  logging_setup.py  pipeline.py  queue.py  runtime.py  vault.py  watchlist_auto.py  workers.py
pkgsentry/analyze/: binary.py  entropy.py  imports.py  iocs.py  lure_names.py  malware_patterns.py  metadata.py  opengrep_scan.py  threat_intel.py  version_diff.py  yara_scan.py
tests/: conftest.py  corpus_harness.py  test_adapter.py  test_capabilities.py  test_cli.py  test_cli_focus.py  test_detonation_queue.py  test_detonation_worker.py  test_discord_ecosystem.py  test_finding_reuse.py  test_focus.py  test_focus_run.py  test_llm_triage_source.py  test_logging.py  test_pipeline.py  test_pipeline_detonation.py  test_pipeline_metadata.py  test_queue.py  test_regression_corpus.py  test_rule_coverage.py  test_runtime.py  test_staged_payload_rule.py  test_threat_intel.py  test_watchlist_auto.py  test_workers.py
tools/: parity_tier1.py  parity_tier2.py  precommit_no_private_intel.py  seed_forge_jsxy_hashes.py  stats.py  test_opengrep_rules.sh  vault_import.py
(+192 files in other folders)
